--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -17,9 +17,11 @@
   margin-bottom: 40px;
 }
 .sb_footer-add h4{
-  font-size: 25px;
   color: var(--textColor);
   font-family: Arizonia;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 400;
 }
 
 .sb_footer-add h6{
@@ -65,6 +67,7 @@ hr{
     margin: 5px;
     flex-direction: column;
   }
+
   .sb_footer-below{
     flex-direction: column;
     justify-content: left;
