--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -52,13 +52,18 @@ hr{
   font-size: 14px;
   line-height: 15px;
   color: var(--textColor);
-  font-weight: 600;
+  font-weight: 400;
+  font-family: 'Roboto', sans-serif;
 }
 .sb_footer-below-links a{
-    margin: 20px;
+    padding: 12px 8px;
+    margin: 16px;
     font-size: 16px;
     font-weight: 500;
     color: var(--textColor);
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    line-height: 100%;
 }
 
 
@@ -73,11 +78,12 @@ hr{
     justify-content: left;
   }
   .sb_footer-below-links{
-    margin: 30px;
+    margin-top: 50px;
+    margin-left: -12px;
   }
   .sb_footer-below-links a{
-    margin: 9px;
-    flex-direction: row;
+    margin: 1px;
+    /* flex-direction: row; */
   }
 }
 @media screen  and (max-width:600){
@@ -86,11 +92,11 @@ hr{
   }
   .sb_footer-below,
   .sb_footer-bef{
-    flex-direction: column;
+    display: flex;
     justify-content: left;
   }
   .sb_footer-below-links{
-    flex-direction: column;
+    display: flex;
   }
   .sb_footer-below-links a{
     flex-direction: column;
@@ -108,6 +114,7 @@ hr{
     justify-content: left;
   }
   .sb_footer-below-links{
+    display: flex;
     flex-direction: column;
   }
   .sb_footer-below-links a{
