--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: Roboto;
-}
+  font-family: 'Roboto', sans-serif;}
 
 :root {
   --Red: #BE0202;
@@ -13,5 +12,12 @@
   --secondaryColor: #ff003c;
   --textColor: #fff;
 }
+a{
+  text-decoration: none;
+}
 
+.active{
+  font-size: 16px;
+  font-weight: 900;
+}
 
