--- a/src/components/header.css
+++ b/src/components/header.css
@@ -31,6 +31,7 @@ nav a{
 nav a:hover {
   font-size: 15px;
   font-weight: 900;
+  color: var(--secondaryColor);
 }
 
 header .nav-btn {
@@ -71,11 +72,10 @@ nav .nav-button button{
   color: #FFF;
 }
 
-
-.navbar-button button:hover,
-.navbar-menu_container button:hover {
+nav .nav-button button:hover,
+nav .navbar-menu_container button:hover {
   background-color: var(--secondaryColor);
-  color: #fff;
+  color: var(--Red);
 }
 
 @media only screen and (max-width: 1024px) {
