--- a/src/pages/Contact_us.css
+++ b/src/pages/Contact_us.css
@@ -14,9 +14,9 @@ section {
 }
 
 .name {
-  display:flex;
-  justify-content: space-between;  
-  max-width: 613px; 
+  display: flex;
+  justify-content: space-between;
+  max-width: 613px;
 }
 
 .name div {
@@ -117,7 +117,7 @@ section {
   font-size: 24px;
   font-style: normal;
   font-weight: 500;
-  line-height: 100%; 
+  line-height: 100%;
   letter-spacing: 0.5px;
   cursor: pointer;
 }
@@ -126,11 +126,12 @@ section {
   color: var(--Red);
   border: none;
 }
+
 /* Responsive design for smaller screens */
 @media screen and (max-width: 1400px) {
   section {
     padding: 80px 0%;
-    transition: .2s;
+    transition: 0.2s;
     height: 0px;
   }
   .contact_img {
@@ -139,25 +140,25 @@ section {
   .contact-form form .btn {
     width: 500px;
   }
-  .contact-form p{
+  .contact-form p {
     font-size: 15px;
   }
-  .contact-form form  {
+  .contact-form form {
     max-width: 500px;
   }
-  .name { 
-    max-width: 500px; 
+  .name {
+    max-width: 500px;
   }
 
 }
 
 @media screen and (max-width: 1090px) {
-  section{
+  section {
     height: 0px;
   }
-  .contact{
+  .contact {
     grid-gap: 2rem;
-    transition: .3s;
+    transition: 0.3s;
   }
   .contact_img {
     margin-left: -25px;
@@ -165,33 +166,34 @@ section {
   .contact-form form .btn {
     width: 400px;
   }
-  .contact-form p{
+  .contact-form p {
     font-size: 15px;
   }
-  .contact-form form  {
+  .contact-form form {
     max-width: 400px;
   }
-  .name { 
-    max-width: 400px; 
+  .name {
+    max-width: 400px;
   }
   .contact-form {
     margin-left: -30px;
   }
 }
+
 @media screen and (max-width: 1000px) {
-  section{
+  section {
     height: 650px;
   }
-  .contact{
+  .contact {
     grid-template-columns: 1fr;
   }
   .contact-form {
     margin-left: 50px;
   }
-  .contact-form{
+  .contact-form {
     order: 2;
   }
-  .contact_img{
+  .contact_img {
     max-width: 100%;
     width: 100%;
     height: auto;
@@ -200,14 +202,16 @@ section {
     margin-top: -50px;
   }
 }
+
+
 @media screen and (max-width: 600px) {
-  .contact_img{
+  .contact_img {
     width: 200px;
     height: 200px;
     margin-top: 100px;
     margin-left: 90px;
   }
-  .contact-form{
+  .contact-form {
     margin-top: 210px;
   }
 }
