--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -86,6 +86,7 @@ hr{
     /* flex-direction: row; */
   }
 }
+
 @media screen  and (max-width:600){
   .socialmedia img{
     flex-direction: column;
@@ -101,11 +102,12 @@ hr{
   .sb_footer-below-links a{
     flex-direction: column;
     margin: 1px;
-    
   }
 }
 @media screen  and (max-width:500px){
   .socialmedia img{
+    margin-top: -30px;
+    margin-bottom: 20px;
     flex-direction: column;
   }
   .sb_footer-below,
@@ -113,14 +115,10 @@ hr{
     flex-direction: column;
     justify-content: left;
   }
-  .sb_footer-below-links{
-    display: flex;
-    flex-direction: column;
-  }
   .sb_footer-below-links a{
-    margin-left: 1px;
-    flex-direction: column;
+      font-size: 14px;
   }
+
 }
 @media screen  and (max-width:400px){
   .socialmedia img{
@@ -138,4 +136,5 @@ hr{
     margin-left: 1px;
     flex-direction: column;
   }
+
 }
