--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
   --whiteColor: #fff;
   --blackColor: #000000;
   --graycolor: #1f1f1f;
+  --darkgraycolor:#353535
 }
 a {
   text-decoration: none;
