--- a/src/components/header.css
+++ b/src/components/header.css
@@ -6,9 +6,10 @@ header {
   align-items: center;
   justify-content: space-between;
   height: 80px;
-  padding: 16px 20px 20px 50px;
+  padding: 15px 15px 15px 20px;
   background-color: var(--whiteColor);
   color: var(--Red);
+  flex-wrap: wrap;
 }
 
 .Navbar h3 {
@@ -65,7 +66,7 @@ nav .nav-button button {
   outline: none;
   cursor: pointer;
   border-radius: 10px;
-  width: 105px;
+  width: 100px;
   height: 40px;
   flex-shrink: 0;
   color: var(--whiteColor);
