--- a/src/components/header.css
+++ b/src/components/header.css
@@ -19,7 +19,7 @@ header {
   line-height: normal;
 }
 nav {
-  margin-left: 50px;
+  margin-left: 80px;
   gap: 30px;
 }
 nav a {
@@ -46,6 +46,7 @@ header .nav-btn {
   visibility: hidden;
   opacity: 0;
   font-size: 1.8rem;
+  display: none;
 }
 
 header div,
@@ -54,7 +55,7 @@ nav {
   align-items: center;
 }
 nav .nav-button {
-  margin-right: -55px;
+  margin-left: 17px;
 }
 nav .nav-button button {
   margin: 6px;
@@ -131,6 +132,7 @@ nav .navbar-menu_container button:hover {
   header .nav-btn {
     visibility: visible;
     opacity: 1;
+    display: flex;
   }
   nav {
     margin-left: 0px;
