--- a/src/pages/About_us.css
+++ b/src/pages/About_us.css
@@ -5,7 +5,7 @@
 .about-us-container .about-us-section h2 {
   color: var(--graycolor);
   font-family: "Roboto", sans-serif;
-  font-size: 32px;
+  font-size :1cm;
   font-style: normal;
   font-weight: 700;
   line-height: 110%;
