--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -1,6 +1,8 @@
+
 .log {
   display: flex;
   flex-direction: row;
+  /* margin-bottom: -700px; */
 }
 .flex1 {
   max-width: 50%;
@@ -19,12 +21,11 @@
 
 h2 {
   color: var(--Red);
-  /* Heading/2 */
-  font-family: Roboto;
+  font-family: 'Roboto',sans-serif;
   font-size: 42px;
   font-style: normal;
   font-weight: 700;
-  line-height: 110%; /* 46.2px */
+  line-height: 110%;
 }
 
 .lbl {
@@ -37,13 +38,11 @@ h2 {
 
 .label {
   color: #1f1f1f;
-
-  /* Body/S */
-  font-family: Roboto;
+  font-family: 'Roboto',sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  line-height: 140%; /* 19.6px */
+  line-height: 140%;
 }
 
 .field {
@@ -73,13 +72,11 @@ h2 {
 
 label {
   color: #1f1f1f;
-
-  /* Body/S */
-  font-family: Roboto;
+  font-family: 'Roboto',sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  line-height: 140%; /* 19.6px */
+  line-height: 140%; 
   max-width: 100%;
   height: auto;
 }
@@ -97,13 +94,11 @@ label {
 
 .disc {
   color: #353535;
-
-  /* Body/XS */
   font-family: Roboto;
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
-  line-height: 140%; /* 16.8px */
+  line-height: 140%;
 }
 
 .parent {
@@ -120,53 +115,142 @@ label {
   gap: 8px;
 }
 
-.check {
+.forget{
+  margin: -0.8cm 0 0cm ;
+  font-size: .9em;
+}
+
+.forget label {
   display: flex;
-  width: 20px;
-  height: 20px;
+  align-items: center;
+  gap: 8px;
+  color: var(--Red);
+  font-family: 'Roboto',sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; 
+}
+.forget label #for{
+  color: var(--Red);
+  text-decoration: none;
+  margin-left: 22.3vw;
+  text-align: right;
+  font-family: 'Roboto',sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; 
+}
+#custom-checkbox {
+  display: none;
+}
+.custom-checkbox-label {
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  border: 1px solid var(--Red);
+  cursor: pointer;
+  position: relative;
+}
+#custom-checkbox:checked + .custom-checkbox-label::after {
+  content: "";
+  position: absolute;
+  left: 5px;
+  top: 1px;
+  width: 2px;
+  height: 8px;
+  border: solid var(--secondaryColor);
+  border-width: 0 2.5px 2.5px 0;
+  transform: rotate(45deg);
+
+}
+
+.flex1 .btn {
+  display: inline-block;
+  background-color: var(--Red);
+  color: var(--whiteColor);
+  padding: 0vw 17vw;
+  height: 48px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  border: 2px solid var(--Red);
+  font-family: "Roboto", sans-serif;
+  font-size: 24px;
+  /* font-style: normal; */
+  font-weight: 500;
+  line-height: 100%;
+  letter-spacing: 0.5px;
+  cursor: pointer;
+  margin-top: -4vh;
+}
+
+
+.flex1 .btn:hover {
+  background-color: var(--secondaryColor);
+  color: var(--Red);
+  border: none;
+}
+
+
+.btn-log{
+  display: flex;
+}
+.btn-log div {
+  max-width: 100%;
+}
+.blog .svg{
+  margin-left: -1vh;
+}
+.blog {
+  display: flex;
+  height: 48px;
+  padding: 0 4.9vh ;
+  justify-content: center;
+  align-items: center;
+  flex: 1 0 0;
+  border-radius: 10px;
+  background-color: var(--whiteColor);
+  border: 2px solid #BE0202;
+  display: flex;
+
+}
+#face{
+  margin-left: 2.5vh;
+}
+.text{
+  display: flex;
+  padding: 0px 16px;
   justify-content: center;
   align-items: center;
   gap: 10px;
-  border: 1px solid #be0202;
+  color: #1F1F1F;
+  font-family: 'Roboto',sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 100%;
+  letter-spacing: 0.5px;
 }
-
-#check {
-  display: flex;
-  width: 16px;
-  height: 16px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  flex-shrink: 0;
-  border: 1px solid #BE0202;
+hr{
+  opacity:0.3 ;
 }
-
-#check:checked{
-  accent-color: #be0202;
-}
-#check:checked label{
-  color: #be0202;
-}
-.rem {
-  color: #be0202;
-
-  /* Body/S */
-  font-family: Roboto;
+.sign p{
+  color: #1E1E1E;
+  font-family: 'Roboto',sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  line-height: 140%; /* 19.6px */
+  line-height: 140%; 
 }
-
-.forget {
-  flex: 1 0 0;
-  color: #be0202;
-  text-align: right;
-
-  /* Body/S */
-  font-family: Roboto;
+#nav{
+  color: var(--Red);
+  font-family: 'Roboto',sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  line-height: 140%; /* 19.6px */
+  line-height: 140%;
 }
+
+
