--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -2,7 +2,6 @@
 .log {
   display: flex;
   flex-direction: row;
-  /* margin-bottom: -700px; */
 }
 .flex1 {
   max-width: 50%;
@@ -37,7 +36,7 @@ h2 {
 }
 
 .label {
-  color: #1f1f1f;
+  color: var(--graycolor);
   font-family: 'Roboto',sans-serif;
   font-size: 14px;
   font-style: normal;
@@ -71,7 +70,7 @@ h2 {
 }
 
 label {
-  color: #1f1f1f;
+  color: var(--graycolor);
   font-family: 'Roboto',sans-serif;
   font-size: 14px;
   font-style: normal;
@@ -89,11 +88,11 @@ label {
   gap: 8px;
   align-self: stretch;
   border-radius: 10px;
-  border: 1px solid #be0202;
+  border: 1px solid var(--Red);
 }
 
 .disc {
-  color: #353535;
+  color: var(--darkgraycolor);
   font-family: Roboto;
   font-size: 12px;
   font-style: normal;
@@ -134,13 +133,16 @@ label {
 .forget label #for{
   color: var(--Red);
   text-decoration: none;
-  margin-left: 22.3vw;
+  margin-left: 44vh;
   text-align: right;
   font-family: 'Roboto',sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
   line-height: 140%; 
+}
+.forget label #for:hover{
+  opacity: 0.7;
 }
 #custom-checkbox {
   display: none;
@@ -170,7 +172,9 @@ label {
   display: inline-block;
   background-color: var(--Red);
   color: var(--whiteColor);
-  padding: 0vw 17vw;
+  padding: 0vw 42.5% 0%  45%;
+  text-align: center;
+  /* width: 100%; */
   height: 48px;
   justify-content: center;
   align-items: center;
@@ -178,7 +182,6 @@ label {
   border: 2px solid var(--Red);
   font-family: "Roboto", sans-serif;
   font-size: 24px;
-  /* font-style: normal; */
   font-weight: 500;
   line-height: 100%;
   letter-spacing: 0.5px;
@@ -212,26 +215,29 @@ label {
   flex: 1 0 0;
   border-radius: 10px;
   background-color: var(--whiteColor);
-  border: 2px solid #BE0202;
+  border: 2px solid var(--Red);
   display: flex;
 
 }
 #face{
-  margin-left: 2.5vh;
+  margin-left: 3vh;
 }
 .text{
   display: flex;
-  padding: 0px 16px;
+  padding: 0vh 2vh;
   justify-content: center;
   align-items: center;
   gap: 10px;
-  color: #1F1F1F;
+  color: var(--graycolor);
   font-family: 'Roboto',sans-serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
   line-height: 100%;
   letter-spacing: 0.5px;
+}
+.text:hover{
+  opacity: 0.7;
 }
 hr{
   opacity:0.3 ;
@@ -252,5 +258,50 @@ hr{
   font-weight: 400;
   line-height: 140%;
 }
+#nav:hover{
+  opacity: 0.7;
+}
+/* @media screen and (max-width: 1596px) {
+  .flex1 .btn {
+
+  }
+  .forget label #for{
+    margin-left: 42vh;
+  }
+}
 
 
+
+
+@media screen and (max-width: 1534px) {
+  .flex1 .btn {
+
+  }
+}
+@media screen and (max-width: 768px) {
+  .log {
+    flex-direction: column;
+  }
+  .flex1, .flex2 {
+    max-width: 100%;
+    padding: 40px;
+  }
+  .flex1 .btn {
+    padding: 0 10vw; 
+  }
+  .inp, .btn, .blog {
+    padding: 12px 2em; 
+  }
+}
+@media (max-width: 768px) {
+  .forget label #for {
+    margin-left: 4vw; 
+  }
+}
+
+@media (max-width: 480px) {
+  .forget label #for {
+    margin-left: 2vw; 
+  }
+}
+ */
