--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -1,4 +1,3 @@
-
 .log {
   display: flex;
   flex-direction: row;
@@ -14,13 +13,9 @@
   justify-content: center;
 }
 
-.flex2 {
-  max-width: 50%;
-}
-
 h2 {
   color: var(--Red);
-  font-family: 'Roboto',sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 42px;
   font-style: normal;
   font-weight: 700;
@@ -37,7 +32,7 @@ h2 {
 
 .label {
   color: var(--graycolor);
-  font-family: 'Roboto',sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -71,11 +66,11 @@ h2 {
 
 label {
   color: var(--graycolor);
-  font-family: 'Roboto',sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  line-height: 140%; 
+  line-height: 140%;
   max-width: 100%;
   height: auto;
 }
@@ -114,9 +109,9 @@ label {
   gap: 8px;
 }
 
-.forget{
-  margin: -0.8cm 0 0cm ;
-  font-size: .9em;
+.forget {
+  margin: -0.8cm 0 0cm;
+  font-size: 0.9em;
 }
 
 .forget label {
@@ -124,24 +119,24 @@ label {
   align-items: center;
   gap: 8px;
   color: var(--Red);
-  font-family: 'Roboto',sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  line-height: 140%; 
+  line-height: 140%;
 }
-.forget label #for{
+.forget label #for {
   color: var(--Red);
   text-decoration: none;
   margin-left: 44vh;
   text-align: right;
-  font-family: 'Roboto',sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  line-height: 140%; 
+  line-height: 140%;
 }
-.forget label #for:hover{
+.forget label #for:hover {
   opacity: 0.7;
 }
 #custom-checkbox {
@@ -165,14 +160,13 @@ label {
   border: solid var(--secondaryColor);
   border-width: 0 2.5px 2.5px 0;
   transform: rotate(45deg);
-
 }
 
 .flex1 .btn {
   display: inline-block;
   background-color: var(--Red);
   color: var(--whiteColor);
-  padding: 0vw 42.5% 0%  45%;
+  padding: 0vw 42.5% 0% 45%;
   text-align: center;
   /* width: 100%; */
   height: 48px;
@@ -189,27 +183,25 @@ label {
   margin-top: -4vh;
 }
 
-
 .flex1 .btn:hover {
   background-color: var(--secondaryColor);
   color: var(--Red);
   border: none;
 }
 
-
-.btn-log{
+.btn-log {
   display: flex;
 }
 .btn-log div {
   max-width: 100%;
 }
-.blog .svg{
+.blog .svg {
   margin-left: -1vh;
 }
 .blog {
   display: flex;
   height: 48px;
-  padding: 0 4.9vh ;
+  padding: 0 4.9vh;
   justify-content: center;
   align-items: center;
   flex: 1 0 0;
@@ -217,49 +209,52 @@ label {
   background-color: var(--whiteColor);
   border: 2px solid var(--Red);
   display: flex;
-
 }
-#face{
+#face {
   margin-left: 3vh;
 }
-.text{
+.text {
   display: flex;
   padding: 0vh 2vh;
   justify-content: center;
   align-items: center;
   gap: 10px;
   color: var(--graycolor);
-  font-family: 'Roboto',sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
   line-height: 100%;
   letter-spacing: 0.5px;
 }
-.text:hover{
+.text:hover {
   opacity: 0.7;
 }
-hr{
-  opacity:0.3 ;
+hr {
+  opacity: 0.3;
 }
-.sign p{
-  color: #1E1E1E;
-  font-family: 'Roboto',sans-serif;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 140%; 
-}
-#nav{
-  color: var(--Red);
-  font-family: 'Roboto',sans-serif;
+.sign p {
+  color: #1e1e1e;
+  font-family: "Roboto", sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
   line-height: 140%;
 }
-#nav:hover{
+#nav {
+  color: var(--Red);
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;
+}
+#nav:hover {
   opacity: 0.7;
+}
+.resp {
+    width: 100%;
+    height: auto;
 }
 /* @media screen and (max-width: 1596px) {
   .flex1 .btn {
