--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -3,15 +3,13 @@
   display: flex;
   flex-direction: row;
 }
-.flex1 {
+.flex1  ,.flex2{
   max-width: 50%;
   display: flex;
-  padding: 80px;
+  padding: 5%;
   flex-direction: column;
-  align-items: flex-start;
-  gap: 48px;
-  flex: 1 0 0;
-  justify-content: center;
+  align-items: center;
+  gap: 5%;
 }
 
 .flex2 {
@@ -21,12 +19,14 @@
 h2 {
   color: var(--Red);
   font-family: 'Roboto',sans-serif;
-  font-size: 42px;
+  font-size: 5vw;
   font-style: normal;
   font-weight: 700;
   line-height: 110%;
 }
-
+.lbl, .lbl1, .lbl2 {
+  width: 100%;
+}
 .lbl {
   display: flex;
   flex-direction: column;
@@ -90,7 +90,10 @@ label {
   border-radius: 10px;
   border: 1px solid var(--Red);
 }
-
+.field, .inp {
+  width: 100%; 
+  border-radius: 5px; 
+}
 .disc {
   color: var(--darkgraycolor);
   font-family: Roboto;
@@ -115,7 +118,7 @@ label {
 }
 
 .forget{
-  margin: -0.8cm 0 0cm ;
+  margin: -16px 0 0 ;
   font-size: .9em;
 }
 
@@ -133,13 +136,15 @@ label {
 .forget label #for{
   color: var(--Red);
   text-decoration: none;
-  margin-left: 44vh;
+  margin-left: auto;
+  margin-right: 0;
   text-align: right;
   font-family: 'Roboto',sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
   line-height: 140%; 
+  display: block;
 }
 .forget label #for:hover{
   opacity: 0.7;
@@ -174,14 +179,14 @@ label {
   color: var(--whiteColor);
   padding: 0vw 42.5% 0%  45%;
   text-align: center;
-  /* width: 100%; */
+  width: 100%;
   height: 48px;
   justify-content: center;
   align-items: center;
   border-radius: 10px;
   border: 2px solid var(--Red);
   font-family: "Roboto", sans-serif;
-  font-size: 24px;
+  font-size: 4vw;
   font-weight: 500;
   line-height: 100%;
   letter-spacing: 0.5px;
@@ -230,7 +235,7 @@ label {
   gap: 10px;
   color: var(--graycolor);
   font-family: 'Roboto',sans-serif;
-  font-size: 16px;
+  font-size: 3vw;
   font-style: normal;
   font-weight: 500;
   line-height: 100%;
@@ -261,23 +266,18 @@ hr{
 #nav:hover{
   opacity: 0.7;
 }
-/* @media screen and (max-width: 1596px) {
-  .flex1 .btn {
 
+
+@media screen and (max-width: 1596px) {
+  .flex1 .btn {
+    padding: 0 35%; 
   }
-  .forget label #for{
-    margin-left: 42vh;
+  .forget label #for {
+    margin-left: 0;
+    text-align: left;
   }
 }
 
-
-
-
-@media screen and (max-width: 1534px) {
-  .flex1 .btn {
-
-  }
-}
 @media screen and (max-width: 768px) {
   .log {
     flex-direction: column;
@@ -286,22 +286,32 @@ hr{
     max-width: 100%;
     padding: 40px;
   }
-  .flex1 .btn {
-    padding: 0 10vw; 
+  .flex1 .btn, .inp, .btn, .blog {
+    padding: 12px 10%;
+    width: 80%;
   }
-  .inp, .btn, .blog {
-    padding: 12px 2em; 
+  h2 {
+    font-size: 6em;
   }
-}
-@media (max-width: 768px) {
-  .forget label #for {
-    margin-left: 4vw; 
+
+  .text {
+    font-size: 4em;
   }
 }
 
 @media (max-width: 480px) {
   .forget label #for {
-    margin-left: 2vw; 
+    margin-left: 10vw; 
+  }
+  h2 {
+    font-size: 8em;
+  }
+
+  .flex1 .btn, .blog, .blog .svg {
+    width: 90%;
+  }
+
+  .text {
+    font-size: 5em;
   }
 }
- */
