--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -11,10 +11,14 @@
   gap: 5%;
 }
 
+.flex2 {
+  max-width: 50%;
+}
+
 h2 {
   color: var(--Red);
-  font-family: "Roboto", sans-serif;
-  font-size: 42px;
+  font-family: 'Roboto',sans-serif;
+  font-size: 5vw;
   font-style: normal;
   font-weight: 700;
   line-height: 110%;
@@ -32,7 +36,7 @@ h2 {
 
 .label {
   color: var(--graycolor);
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto',sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -66,11 +70,11 @@ h2 {
 
 label {
   color: var(--graycolor);
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto',sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  line-height: 140%;
+  line-height: 140%; 
   max-width: 100%;
   height: auto;
 }
@@ -113,8 +117,12 @@ label {
 }
 
 .forget {
-  margin: -0.8cm 0 0cm;
-  font-size: 0.9em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: -16px 0 0;
+  font-size: .9em;
+  width: 100%;
 }
 
 .checkbox-container {
@@ -125,25 +133,12 @@ label {
 
 .checkbox-container label {
   color: var(--Red);
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 14px;
   font-weight: 400;
-  line-height: 140%;
+  line-height: 140%; 
 }
-.forget label #for {
-  color: var(--Red);
-  text-decoration: none;
-  margin-left: 44vh;
-  text-align: right;
-  font-family: "Roboto", sans-serif;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 140%;
-}
-.forget label #for:hover {
-  opacity: 0.7;
-}
+
 #custom-checkbox {
   display: none;
 }
@@ -170,11 +165,25 @@ label {
   transform: rotate(45deg);
 }
 
+#for {
+  color: var(--Red);
+  text-decoration: none;
+  font-family: 'Roboto',sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; 
+}
+
+#for:hover {
+  opacity: 0.7;
+}
+
 .flex1 .btn {
   display: inline-block;
   background-color: var(--Red);
   color: var(--whiteColor);
-  padding: 0vw 42.5% 0% 45%;
+  padding: 0vw 42.5% 0%  45%;
   text-align: center;
   width: 100%;
   height: 48px;
@@ -191,13 +200,15 @@ label {
   margin-top: -4vh;
 }
 
+
 .flex1 .btn:hover {
   background-color: var(--secondaryColor);
   color: var(--Red);
   border: none;
 }
 
-.btn-log {
+
+.btn-log{
   display: flex;
   justify-content: center;
   gap: 20px;
@@ -206,13 +217,13 @@ label {
 .btn-log div {
   max-width: 100%;
 }
-.blog .svg {
+.blog .svg{
   margin-left: -1vh;
 }
 .blog {
   display: flex;
   height: 48px;
-  padding: 0 4.9vh;
+  padding: 0 4.9vh ;
   justify-content: center;
   align-items: center;
   flex: 1 0 0;
@@ -222,55 +233,45 @@ label {
   display: flex;
   width: 100%;
 }
-
-#face {
-  margin-left: 3vh;
-}
-.text {
+.text{
   display: flex;
   padding: 0vh 2vh;
   justify-content: center;
   align-items: center;
   gap: 10px;
   color: var(--graycolor);
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto',sans-serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
   line-height: 100%;
   letter-spacing: 0.5px;
 }
-.text:hover {
+.text:hover{
   opacity: 0.7;
 }
-hr {
-  opacity: 0.3;
+hr{
+  opacity:0.3 ;
 }
-.sign p {
-  color: #1e1e1e;
-  font-family: "Roboto", sans-serif;
+.sign p{
+  color: #1E1E1E;
+  font-family: 'Roboto',sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  line-height: 140%;
+  line-height: 140%; 
 }
-#nav {
+#nav{
   color: var(--Red);
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto',sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
   line-height: 140%;
 }
-#nav:hover {
+#nav:hover{
   opacity: 0.7;
 }
-.resp {
-    width: 100%;
-    height: auto;
-}
-/* @media screen and (max-width: 1596px) {
-  .flex1 .btn {
 
 
 @media screen and (max-width: 1596px) {
