--- a/src/pages/sign_up.css
+++ b/src/pages/sign_up.css
@@ -2,13 +2,13 @@
   display: flex;
   flex-direction: row;
 }
-.flex1 .name{
+.flex1 .name {
   display: flex;
   justify-content: space-between;
   width: 100%;
   gap: 10px;
 }
-.flex1 #nam{
+.flex1 #nam {
   display: flex;
   height: 48px;
   padding: 0px 7.6vw 0px 2vh;
@@ -35,7 +35,7 @@
 
 h2 {
   color: var(--Red);
-  font-family: 'Roboto',sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 42px;
   font-style: normal;
   font-weight: 700;
@@ -52,7 +52,7 @@ h2 {
 
 .label {
   color: var(--graycolor);
-  font-family: 'Roboto',sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -86,11 +86,11 @@ h2 {
 
 label {
   color: var(--graycolor);
-  font-family: 'Roboto',sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  line-height: 140%; 
+  line-height: 140%;
   max-width: 100%;
   height: auto;
 }
@@ -129,9 +129,9 @@ label {
   gap: 8px;
 }
 
-.forget{
-  margin: -0.8cm 0 0cm ;
-  font-size: .9em;
+.forget {
+  margin: -0.8cm 0 0cm;
+  font-size: 0.9em;
 }
 
 .forget label {
@@ -139,13 +139,13 @@ label {
   align-items: center;
   gap: 8px;
   color: var(--Red);
-  font-family: 'Roboto',sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  line-height: 140%; 
+  line-height: 140%;
 }
-.tex{
+.tex {
   color: var(--graycolor);
 }
 #custom-checkbox {
@@ -169,14 +169,13 @@ label {
   border: solid var(--secondaryColor);
   border-width: 0 2.5px 2.5px 0;
   transform: rotate(45deg);
-
 }
 
 .flex1 .btn {
   display: inline-block;
   background-color: var(--Red);
   color: var(--whiteColor);
-  padding: 0vw 39% 0%  45%;
+  padding: 0vw 39% 0% 45%;
   text-align: center;
   /* width: 100%; */
   height: 48px;
@@ -193,14 +192,13 @@ label {
   margin-top: -4vh;
 }
 
-
 .flex1 .btn:hover {
   background-color: var(--secondaryColor);
   color: var(--Red);
   border: none;
 }
 
-.btn-log{
+.btn-log {
   display: flex;
   justify-content: center;
   gap: 20px;
@@ -209,13 +207,13 @@ label {
 .btn-log div {
   max-width: 100%;
 }
-.blog .svg{
+.blog .svg {
   margin-left: -1vh;
 }
 .blog {
   display: flex;
   height: 48px;
-  padding: 0 4.9vh ;
+  padding: 0 4.9vh;
   justify-content: center;
   align-items: center;
   flex: 1 0 0;
@@ -223,47 +221,46 @@ label {
   background-color: var(--whiteColor);
   border: 2px solid var(--Red);
   display: flex;
-
 }
-#face{
+#face {
   margin-left: 3vh;
 }
-.text{
+.text {
   display: flex;
   padding: 0vh 2vh;
   justify-content: center;
   align-items: center;
   gap: 10px;
   color: var(--graycolor);
-  font-family: 'Roboto',sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
   line-height: 100%;
   letter-spacing: 0.5px;
 }
-.text:hover{
+.text:hover {
   opacity: 0.7;
 }
-hr{
-  opacity:0.3 ;
+hr {
+  opacity: 0.3;
 }
-.sign p{
-  color: #1E1E1E;
-  font-family: 'Roboto',sans-serif;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 140%; 
-}
-#nav{
-  color: var(--Red);
-  font-family: 'Roboto',sans-serif;
+.sign p {
+  color: #1e1e1e;
+  font-family: "Roboto", sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
   line-height: 140%;
 }
-#nav:hover{
+#nav {
+  color: var(--Red);
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;
+}
+#nav:hover {
   opacity: 0.7;
 }
