--- a/src/pages/About_us.css
+++ b/src/pages/About_us.css
@@ -146,16 +146,30 @@
   line-height: 110%; 
 }
 
-.Ourfeatures {
+
+
+
+
+.container{
+  /* overflow-x: hidden; */
   position: relative;
-  width: 100%;
+  height: 50vh;
+  top: -15vh;
+  /* width: 100%;
+  scroll-behavior: smooth;
+  transition: transform 0.3s ease-in-out; */
+}
+.container .Ourfeatures {
+  /* position: relative; */
+  width: 100%; 
   display: flex;
   gap: 40px;
   align-items: flex-start;
+  scroll-behavior: smooth;
   padding: 20px;
+  overflow: hidden;
 }
-
-.Ourfeatures .feature {
+.container .Ourfeatures .feature {
   flex: 0 0 auto;
   max-width: 374px;
   min-height: 359px;
@@ -163,7 +177,21 @@
   border: 1px solid var(--Red);
   background: linear-gradient(90deg, var(--blackred) 0%, var(--blackred) 100%);
 }
-
+.container .control{
+  position: relative;
+  cursor: pointer;
+  object-fit: cover;
+}
+.container .prev{
+  left: -3vw;
+  top: 33vh;
+  /* transform: translate(-50%, -50%); */
+}
+.container .next{
+  right: -84vw;
+  top: -34vh;
+  /* transform: translate(50%, -50%); */
+}
 .about-us-section3 .Ourfeatures .feature p {
   color: var(--whiteColor);
   font-family: 'Roboto', sans-serif;
@@ -171,48 +199,10 @@
   line-height: 110%;
   padding: 3vh;
 }
-.container{
-  overflow-x: hidden;
-  position: relative;
-  width: 100%;
-  scroll-behavior: smooth;
-  transition: transform 0.3s ease-in-out;
-}
-.container .arrow-container {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  color: var(--whiteColor);
-  border: none;
-  cursor: pointer;
-  padding: 10px;
-  border-radius: 50%;
-  z-index: 10000;
-}
-.container .arrow-container {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  color: var(--whiteColor);
-  border: none;
-  cursor: pointer;
-  border-radius: 50%;
-  z-index: 100;
-}
-.arrow.left,
-.arrow.right {
-  border: none;
-  background: transparent;
-  cursor: pointer;
-}
-.arrow.right{
-  margin-left: 85vw;
-}
-.arrow.left{
-  /* margin-left: 2vw; */
-}
-.arrow-container:hover img {
+
+.control:hover {
   transform: scale(1.2);
+  transition: transform 0.3s ease;
 }
 
 .Ourfeatures:hover .feature {
